WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88774
[GTK] Memory leaks in DRT EventSender.cpp
https://bugs.webkit.org/show_bug.cgi?id=88774
Summary
[GTK] Memory leaks in DRT EventSender.cpp
Sudarsana Nagineni (babu)
Reported
2012-06-11 04:15:45 PDT
Possible memory leaks in DRT EventSender code. ==26953== 136 bytes in 1 blocks are still reachable in loss record 11,373 of 12,819 ==26953== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==26953== by 0xC59EA38: g_malloc (gmem.c:159) ==26953== by 0xC5B1C62: g_slice_alloc (gslice.c:1003) ==26953== by 0xC5B21A5: g_slice_alloc0 (gslice.c:1029) ==26953== by 0xB8CB5AF: gdk_event_new (gdkevents.c:426) ==26953== by 0x4633A5: mouseDownCallback(OpaqueJSContext const*, OpaqueJSValue*, OpaqueJSValue*, unsigned long, OpaqueJSValue const* const*, OpaqueJSValue const**) (EventSender.cpp:317) ==26953== by 0x525460B: JSC::JSCallbackFunction::call(JSC::ExecState*) (JSCallbackFunction.cpp:73) ==26953== by 0x5435722: JSC::LLInt::handleHostCall(JSC::ExecState*, JSC::Instruction*, JSC::JSValue, JSC::CodeSpecializationKind) (LLIntSlowPaths.cpp:1283) ==26953== by 0x54383F5: JSC::LLInt::setUpCall(JSC::ExecState*, JSC::Instruction*, JSC::CodeSpecializationKind, JSC::JSValue, JSC::LLIntCallLinkInfo*) (LLIntSlowPaths.cpp:1327) ==26953== by 0x543896F: JSC::LLInt::genericCall(JSC::ExecState*, JSC::Instruction*, JSC::CodeSpecializationKind) (LLIntSlowPaths.cpp:1383) ==26953== 136 bytes in 1 blocks are still reachable in loss record 11,374 of 12,819 ==26953== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==26953== by 0xC59EA38: g_malloc (gmem.c:159) ==26953== by 0xC5B1C62: g_slice_alloc (gslice.c:1003) ==26953== by 0xC5B21A5: g_slice_alloc0 (gslice.c:1029) ==26953== by 0xB8CB5AF: gdk_event_new (gdkevents.c:426) ==26953== by 0x463557: mouseUpCallback(OpaqueJSContext const*, OpaqueJSValue*, OpaqueJSValue*, unsigned long, OpaqueJSValue const* const*, OpaqueJSValue const**) (EventSender.cpp:365) ==26953== by 0x525460B: JSC::JSCallbackFunction::call(JSC::ExecState*) (JSCallbackFunction.cpp:73) ==26953== by 0x5435722: JSC::LLInt::handleHostCall(JSC::ExecState*, JSC::Instruction*, JSC::JSValue, JSC::CodeSpecializationKind) (LLIntSlowPaths.cpp:1283) ==26953== by 0x54383F5: JSC::LLInt::setUpCall(JSC::ExecState*, JSC::Instruction*, JSC::CodeSpecializationKind, JSC::JSValue, JSC::LLIntCallLinkInfo*) (LLIntSlowPaths.cpp:1327) ==26953== by 0x543896F: JSC::LLInt::genericCall(JSC::ExecState*, JSC::Instruction*, JSC::CodeSpecializationKind) (LLIntSlowPaths.cpp:1383) ==17417== 136 bytes in 1 blocks are still reachable in loss record 11,013 of 12,261 ==17417== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==17417== by 0xC59EA38: g_malloc (gmem.c:159) ==17417== by 0xC5B1C62: g_slice_alloc (gslice.c:1003) ==17417== by 0xC5B21A5: g_slice_alloc0 (gslice.c:1029) ==17417== by 0xB8CB5AF: gdk_event_new (gdkevents.c:426) ==17417== by 0x462D8A: contextClickCallback(OpaqueJSContext const*, OpaqueJSValue*, OpaqueJSValue*, unsigned long, OpaqueJSValue const* const*, OpaqueJSValue const**) (EventSender.cpp:206) ==17417== by 0x525460B: JSC::JSCallbackFunction::call(JSC::ExecState*) (JSCallbackFunction.cpp:73) ==17417== by 0x5435722: JSC::LLInt::handleHostCall(JSC::ExecState*, JSC::Instruction*, JSC::JSValue, JSC::CodeSpecializationKind) (LLIntSlowPaths.cpp:1283) ==17417== by 0x54383F5: JSC::LLInt::setUpCall(JSC::ExecState*, JSC::Instruction*, JSC::CodeSpecializationKind, JSC::JSValue, JSC::LLIntCallLinkInfo*) (LLIntSlowPaths.cpp:1327) ==17417== by 0x543896F: JSC::LLInt::genericCall(JSC::ExecState*, JSC::Instruction*, JSC::CodeSpecializationKind) (LLIntSlowPaths.cpp:1383)
Attachments
Patch
(2.73 KB, patch)
2012-06-11 04:29 PDT
,
Sudarsana Nagineni (babu)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sudarsana Nagineni (babu)
Comment 1
2012-06-11 04:29:32 PDT
Created
attachment 146830
[details]
Patch Fixed possible memory leaks.
WebKit Review Bot
Comment 2
2012-06-11 12:50:16 PDT
Comment on
attachment 146830
[details]
Patch Clearing flags on attachment: 146830 Committed
r119999
: <
http://trac.webkit.org/changeset/119999
>
WebKit Review Bot
Comment 3
2012-06-11 12:50:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug