[GTK] Memory leaks in DRT EventSender.cpp https://bugs.webkit.org/show_bug.cgi?id=88774

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-06-11
Reviewed by Martin Robinson.

Fix a few possible memory leaks in EventSender code.

* DumpRenderTree/gtk/EventSender.cpp:
(contextClickCallback): Free the event returned by gdk_event_new().
(mouseDownCallback): Ditto.
(mouseUpCallback): Ditto.

Canonical link: https://commits.webkit.org/106633@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119999 268f45cc-cd09-0410-ab3c-d52691b4dbfc